# porg

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  index.html
doc/: Makefile.am  Makefile.in  faq.txt  index.html  porg.8.in  porgball.8.in  porgrc.5.in
grop/: Makefile.am  Makefile.in  db.cc  db.h  filestreeview.cc  filestreeview.h  find.cc  infotextview.cc  lock.cc  lock.h  main.cc  maintreeview.cc  maintreeview.h  mainwindow.cc  opt.cc  opt.h  pkg.h  porgball.cc  preferences.cc  properties.cc  removepkg.cc  util.cc
lib/: Makefile.in
lib/porg/: Makefile.in  baseopt.cc  baseopt.h  basepkg.cc  basepkg.h  common.cc  common.h  file.cc  file.h  rexp.cc  rexp.h
lib/porg-log/: Makefile.am  Makefile.in  log.c
porg/: Makefile.am  Makefile.in  db.cc  db.h  logger.cc  logger.h  main.cc  main.h  newpkg.cc  newpkg.h  opt.cc  opt.h  out.cc  out.h  pkg.cc  pkg.h  util.cc  util.h
scripts/: Makefile.am  Makefile.in  paco2porg.in  porg_bash_completion  porgball.in
